save - add from vignanam.org

--- a/stotram/kanakadhara-stotram.html
+++ b/stotram/kanakadhara-stotram.html
@@ -22,10 +22,10 @@
     <h3>ಸಂಕಲ್ಪಮ್ (Sankalpam)</h3>
 
     <p>
-        ಕಮಲೇ ಕಮಲಾಕ್ಷವಲ್ಲಭೆ ತ್ವಂ <br>
-        ಕರುಣಾಪೂರ-ತರಂಗೀತೈರಪಂಗೈಃ । <br>
+        ಕಮಲೇ ಕಮಲಾಕ್ಷ ವಲ್ಲಭೇ ತ್ವಂ <br>
+        ಕರುಣಾಪೂರ ತರಂಗಿತೈರಪಾಂಗೈಃ । <br>
         ಅವಲೋಕಯ ಮಾಮಕಿಂಚನಾನಾಂ <br>
-        ಪ್ರಥಮಂ ಪಾತ್ರಂ ಅಕೃತ್ರಿಮಂ ದಯಾಯಾಃ ॥ <br>
+        ಪ್ರಥಮಂ ಪಾತ್ರಮಕೃತಿಮಂ ದಯಾಯಾಃ ॥ <br>
 
         <span class="ENG">
             kamale kamalaaksha vallabe tvam <br>
@@ -107,8 +107,8 @@
     <p>
         ಅಂಗಂ ಹರೇಃ ಪುಲಕಭೂಷಣಮಾಶ್ರಯಂತೀ <br>
         ಭೃಂಗಾಂಗನೇವ ಮುಕುಳಾಭರಣಂ ತಮಾಲಂ । <br>
-        ಅಂಗೀಕೃತಾಖಿಲ ವಿಭೂತಿ-ರಪಾಂಗಲೀಲಾ <br>
-        ಮಾಂಗಲ್ಯದಾಸ್ತು ಮಮ ಮಂಗಳದೇವತಾಯಾಃ ॥ 1 ॥ <br>
+        ಅಂಗೀಕೃತಾಖಿಲ ವಿಭೂತಿರಪಾಂಗಲೀಲಾ <br>
+        ಮಾಂಗಲ್ಯದಾಸ್ತು ಮಮ ಮಂಗಳದೇವತಾಯಾಃ ॥ <br>
 
         <span class="ENG">
             aMgaM harēh pulakabhūṣaṇamāśrayantī <br>
@@ -126,8 +126,8 @@
     <p>
         ಮುಗ್ಧಾ ಮುಹುರ್ವಿದಧತೀ ವದನೇ ಮುರಾರೇಃ <br>
         ಪ್ರೇಮತ್ರಪಾಪ್ರಣಿಹಿತಾನಿ ಗತಾಗತಾನಿ । <br>
-        ಮಾಲಾ ದೃಶೋರ್ಮಧುಕರೀವ ಮಹೋತ್ಪಲೇ ಯಾ <br>
-        ಸಾ ಮೇ ಶ್ರಿಯಂ ದಿಶತು ಸಾಗರ ಸಂಭವಾ ಯಾಃ ॥ 2 ॥ <br>
+        ಮಾಲಾದೃಶೋರ್ಮಧುಕರೀವ ಮಹೋತ್ಪಲೇ ಯಾ <br>
+        ಸಾ ಮೇ ಶ್ರಿಯಂ ದಿಶತು ಸಾಗರ ಸಂಭವಾ ಯಾಃ ॥ <br>
 
         <span class="ENG">
             mugdhaa muhurvidadhatee vadanae muraarae: <br>
@@ -143,10 +143,10 @@
     </p>
 
     <p>
-        ವಿಶ್ವಾಮರೇಂದ್ರ-ಪದವಿಭ್ರಮ-ದಾನ-ದಕ್ಷಂ <br>
-        ಆನಂದಹೇತು-ರಧಿಕಂ ಮುರವಿದ್ವಿಷೋಽಪಿ | <br>
+        ವಿಶ್ವಾಮರೇಂದ್ರ ಪದ ವಿಭ್ರಮ ದಾನದಕ್ಷಂ <br>
+        ಆನಂದಹೇತುರಧಿಕಂ ಮುರವಿದ್ವಿಷೋಽಪಿ । <br>
         ಈಷನ್ನಿಷೀದತು ಮಯಿ ಕ್ಷಣಮೀಕ್ಷಣಾರ್ಥಂ <br>
-        ಇಂದೀವರೋದರ-ಸಹೋದರಮಿಂದಿರಾ-ಯಾಃ || <br>
+        ಇಂದೀವರೋದರ ಸಹೋದರಮಿಂದಿರಾ ಯಾಃ ॥ <br>
 
         <span class="ENG">
             viSvaamaraeMdra-padavibhrama-daana-dakshaM <br>
@@ -164,9 +164,9 @@
 
     <p>
         ಆಮೀಲಿತಾಕ್ಷಮಧಿಗ್ಯಮ ಮುದಾ ಮುಕುಂದಂ <br>
-        ಆನಂದಕಂದ-ಮನಿಮೇಷ-ಮನಂಗ-ತಂತ್ರಮ್ । <br>
-        ಆಕೇಕರ-ಸ್ಥಿತ-ಕನೀನಿಕ-ಪಕ್ಷ್ಮ-ನೇತ್ರಂ <br>
-        ಭೂತ್ಯೈ-ಭವೆನ್ಮಮ-ಭುಜಂಗ-ಶಯಾಂಗನಾ-ಯಾಃ <br>
+        ಆನಂದಕಂದಮನಿಮೇಷಮನಂಗ ತಂತ್ರಂ । <br>
+        ಆಕೇಕರಸ್ಥಿತಕನೀನಿಕಪಕ್ಷ್ಮನೇತ್ರಂ <br>
+        ಭೂತ್ಯೈ ಭವನ್ಮಮ ಭುಜಂಗ ಶಯಾಂಗನಾ ಯಾಃ ॥ <br>
 
         <span class="ENG">
             aameelitaaksha madhigamya mudaa mukuMdaM <br>
@@ -182,10 +182,10 @@
     </p>
 
     <p>
-        ಕಾಲಾಂಬುದಾಳಿ-ಲಲಿತೋರಸಿ ಕೈಟಭಾರೇಃ <br>
-        ಧಾರಾ-ಧರೇ ಸ್ಫುರತಿ ಯಾ ತಡಿದಂಗನೇವ । <br>
+        ಕಾಲಾಂಬುದಾಳಿ ಲಲಿತೋರಸಿ ಕೈಟಭಾರೇಃ <br>
+        ಧಾರಾಧರೇ ಸ್ಫುರತಿ ಯಾ ತಟಿದಂಗನೇವ । <br>
         ಮಾತುಸ್ಸಮಸ್ತಜಗತಾಂ ಮಹನೀಯಮೂರ್ತಿಃ <br>
-        ಭದ್ರಾಣಿ ಮೇ ದಿಶತು ಭಾರ್ಗವ ನಂದನಾಯಾಃ <br>
+        ಭದ್ರಾಣಿ ಮೇ ದಿಶತು ಭಾರ್ಗವನಂದನಾ ಯಾಃ ॥ <br>
 
         <span class="ENG">
             kaalaaMbudaali-lalitOrasi kaiTabhaarae: <br>
@@ -202,9 +202,9 @@
 
     <p>
         ಬಾಹ್ವಂತರೇ ಮಧುಜಿತಃ ಶ್ರಿತಕೌಸ್ತುಭೇ ಯಾ <br>
-        ಹಾರಾವಳೀವ ಹರಿನೀಲ-ಮಯೀ ವಿಭಾತಿ । <br>
+        ಹಾರಾವಳೀವ ಹರಿನೀಲಮಯೀ ವಿಭಾತಿ । <br>
         ಕಾಮಪ್ರದಾ ಭಗವತೋಽಪಿ ಕಟಾಕ್ಷಮಾಲಾ <br>
-        ಕಳ್ಯಾಣಮಾವಹತು ಮೇ ಕಮಲಾಲಯಾ ಯಾಃ <br>
+        ಕಳ್ಯಾಣಮಾವಹತು ಮೇ ಕಮಲಾಲಯಾ ಯಾಃ ॥ <br>
 
         <span class="ENG">
             baahvaMtarae murajita: Srithakaustubhae yaa <br>
@@ -221,9 +221,9 @@
 
     <p>
         ಪ್ರಾಪ್ತಂ ಪದಂ ಪ್ರಥಮತಃ ಖಲು ಯತ್ಪ್ರಭಾವಾತ್ <br>
-        ಮಾಂಗಳ್ಯಭಾಜಿ ಮಧುಮಾಥಿನಿ ಮನ್ಮಥೇನ । <br>
-        ಮಯ್ಯಾಪತೇ ತ್ತದಿಹ ಮಂಥರ-ಮೀಕ್ಷಣಾರ್ಧಂ <br>
-        ಮಂದಾಲಸಂ ಚ ಮಕರಾಲಯ-ಕನ್ಯಕಾಯಾಃ <br>
+        ಮಾಂಗಲ್ಯಭಾಜಿ ಮಧುಮಾಥಿನಿ ಮನ್ಮಥೇನ । <br>
+        ಮಯ್ಯಾಪತೇತ್ತದಿಹ ಮಂಥರಮೀಕ್ಷಣಾರ್ಥಂ <br>
+        ಮಂದಾಲಸಂ ಚ ಮಕರಾಲಯ ಕನ್ಯಕಾ ಯಾಃ ॥ <br>
 
         <span class="ENG">
             praaptaM padaM prathamata: khalu yatprabhaavaat <br>
@@ -239,10 +239,10 @@
     </p>
 
     <p>
-        ದದ್ಯಾದ್ದಯಾನು-ಪವನೋ ದ್ರವಿಣಾಂಬುಧಾರಾಂ <br>
-        ಅಸ್ಮಿನ್ನಕಿಂಚನ-ವಿಹಂಗ-ಶಿಶೌ ವಿಷಣ್ಣೇ । <br>
-        ದುಷ್ಕರ್ಮ-ಘರ್ಮ-ಮಪನೀಯ ಚಿರಾಯ ದೂರಂ <br>
-        ನಾರಾಯಣ-ಪ್ರಣಯಿನೀ-ನಯನಾಂಬುವಾಹಃ <br>
+        ದದ್ಯಾದ್ದಯಾನು ಪವನೋ ದ್ರವಿಣಾಂಬುಧಾರಾಂ <br>
+        ಅಸ್ಮಿನ್ನಕಿಂಚನ ವಿಹಂಗ ಶಿಶೌ ವಿಷಣ್ಣೇ । <br>
+        ದುಷ್ಕರ್ಮಘರ್ಮಮಪನೀಯ ಚಿರಾಯ ದೂರಂ <br>
+        ನಾರಾಯಣ ಪ್ರಣಯಿನೀ ನಯನಾಂಬುವಾಹಃ ॥ <br>
 
         <span class="ENG">
             dadyaaddayaanupavanO draviNaaMbudhaaraaM <br>
@@ -259,79 +259,79 @@
 
     <p>
         ಇಷ್ಟಾ ವಿಶಿಷ್ಟಮತಯೋಪಿ ಯಯಾ ದಯಾರ್ದ್ರ <br>
-        ದೃಷ್ಟಾ ಸ್ತ್ರಿವಿಷ್ಟಪ ಪದಂ ಸುಲಭಂ ಲಭಂತೇ । <br>
+        ದೃಷ್ಟ್ಯಾ ತ್ರಿವಿಷ್ಟಪಪದಂ ಸುಲಭಂ ಲಭಂತೇ । <br>
         ದೃಷ್ಟಿಃ ಪ್ರಹೃಷ್ಟ ಕಮಲೋದರ ದೀಪ್ತಿರಿಷ್ಟಾಂ <br>
-        ಪುಷ್ಟಿಂ ಕೃಷೀಷ್ಟ ಮಮ ಪುಷ್ಕರ ವಿಷ್ಟರಾ ಯಾಃ <br>
+        ಪುಷ್ಟಿಂ ಕೃಷೀಷ್ಟ ಮಮ ಪುಷ್ಕರ ವಿಷ್ಟರಾ ಯಾಃ ॥ <br>
     </p>
 
     <p>
-        ಗೀರ್ದೇವ ತೇತಿ ಗರುಡಧ್ವಜ ಸುಂದರೀತಿ <br>
+        ಗೀರ್ದೇವತೇತಿ ಗರುಡಧ್ವಜ ಸುಂದರೀತಿ <br>
         ಶಾಕಂಬರೀತಿ ಶಶಿಶೇಖರ ವಲ್ಲಭೇತಿ । <br>
         ಸೃಷ್ಟಿ ಸ್ಥಿತಿ ಪ್ರಳಯ ಕೇಳಿಷು ಸಂಸ್ಥಿತಾಯೈ <br>
-        ತಸ್ಯೈ ನಮಸ್ತ್ರಿಭುವನೈಕ ಗುರೋಸ್ತರುಣ್ಯೈ <br>
+        ತಸ್ಯೈ ನಮಸ್ತ್ರಿಭುವನೈಕ ಗುರೋಸ್ತರುಣ್ಯೈ ॥ <br>
     </p>
 
     <p>
         ಶ್ರುತ್ಯೈ ನಮೋಽಸ್ತು ಶುಭಕರ್ಮ ಫಲಪ್ರಸೂತ್ಯೈ <br>
         ರತ್ಯೈ ನಮೋಽಸ್ತು ರಮಣೀಯ ಗುಣಾರ್ಣವಾಯೈ । <br>
         ಶಕ್ತ್ಯೈ ನಮೋಽಸ್ತು ಶತಪತ್ರ ನಿಕೇತನಾಯೈ <br>
-        ಪುಷ್ಟ್ಯೈ ನಮೋಽಸ್ತು ಪುರುಷೋತ್ತಮ ವಲ್ಲಭಾಯೈ <br>
+        ಪುಷ್ಟ್ಯೈ ನಮೋಽಸ್ತು ಪುರುಷೋತ್ತಮ ವಲ್ಲಭಾಯೈ ॥ <br>
     </p>
 
     <p>
         ನಮೋಽಸ್ತು ನಾಳೀಕ ನಿಭಾನನಾಯೈ <br>
         ನಮೋಽಸ್ತು ದುಗ್ಧೋದಧಿ ಜನ್ಮಭೂಮ್ಯೈ । <br>
         ನಮೋಽಸ್ತು ಸೋಮಾಮೃತ ಸೋದರಾಯೈ <br>
-        ನಮೋಽಸ್ತು ನಾರಾಯಣ ವಲ್ಲಭಾಯೈ <br>
+        ನಮೋಽಸ್ತು ನಾರಾಯಣ ವಲ್ಲಭಾಯೈ ॥ <br>
     </p>
 
     <p>
         ನಮೋಽಸ್ತು ಹೇಮಾಂಬುಜ ಪೀಠಿಕಾಯೈ <br>
-        ನಮೋಽಸ್ತು ಭೂಮಂಡಲ ನಾಯಿಕಾಯೈ । <br>
+        ನಮೋಽಸ್ತು ಭೂಮಂಡಲ ನಾಯಿಕಾಯೈ ।
         ನಮೋಽಸ್ತು ದೇವಾದಿ ದಯಾಪರಾಯೈ <br>
-        ನಮೋಽಸ್ತು ಶಾರಂಗಾಯುಧ ವಲ್ಲಭಾಯೈ <br>
+        ನಮೋಽಸ್ತು ಶಾರಂಗಾಯುಧ ವಲ್ಲಭಾಯೈ ॥ <br>
     </p>
 
     <p>
         ನಮೋಽಸ್ತು ದೇವ್ಯೈ ಭೃಗುನಂದನಾಯೈ <br>
         ನಮೋಽಸ್ತು ವಿಷ್ಣೋರುರಸಿ ಸ್ಥಿತಾಯೈ । <br>
         ನಮೋಽಸ್ತು ಲಕ್ಷ್ಮ್ಯೈ ಕಮಲಾಲಯಾಯೈ <br>
-        ನಮೋಽಸ್ತು ದಾಮೋದರ ವಲ್ಲಭಾಯೈ <br>
+        ನಮೋಽಸ್ತು ದಾಮೋದರ ವಲ್ಲಭಾಯೈ ॥ <br>
     </p>
 
     <p>
         ನಮೋಽಸ್ತು ಕಾಂತ್ಯೈ ಕಮಲೇಕ್ಷಣಾಯೈ <br>
         ನಮೋಽಸ್ತು ಭೂತ್ಯೈ ಭುವನಪ್ರಸೂತ್ಯೈ । <br>
         ನಮೋಽಸ್ತು ದೇವಾದಿಭಿರರ್ಚಿತಾಯೈ <br>
-        ನಮೋಽಸ್ತು ನಂದಾತ್ಮಜ ವಲ್ಲಭಾಯೈ <br>
+        ನಮೋಽಸ್ತು ನಂದಾತ್ಮಜ ವಲ್ಲಭಾಯೈ ॥ <br>
     </p>
 
     <p>
         ಸಂಪತ್ಕರಾಣಿ ಸಕಲೇಂದ್ರಿಯ ನಂದನಾನಿ <br>
         ಸಾಮ್ರಾಜ್ಯ ದಾನವಿಭವಾನಿ ಸರೋರುಹಾಕ್ಷಿ । <br>
-        ತ್ವದ್ವಂದನಾನಿ ದುರಿತೋ ಧ್ಧರಣೋದ್ಯತಾನಿ <br>
-        ಮಾಮೇವ ಮಾತರನಿಶಂ ಕಲಯಂತು ನಾನ್ಯೇ <br>
+        ತ್ವದ್ವಂದನಾನಿ ದುರಿತಾ ಹರಣೋದ್ಯತಾನಿ <br>
+        ಮಾಮೇವ ಮಾತರನಿಶಂ ಕಲಯಂತು ಮಾನ್ಯೇ ॥ <br>
     </p>
 
     <p>
         ಯತ್ಕಟಾಕ್ಷ ಸಮುಪಾಸನಾ ವಿಧಿಃ <br>
         ಸೇವಕಸ್ಯ ಸಕಲಾರ್ಥ ಸಂಪದಃ । <br>
         ಸಂತನೋತಿ ವಚನಾಂಗ ಮಾನಸೈಃ <br>
-        ತ್ವಾಂ ಮುರಾರಿಹೃದಯೇಶ್ವರೀಂ ಭಜೇ <br>
+        ತ್ವಾಂ ಮುರಾರಿಹೃದಯೇಶ್ವರೀಂ ಭಜೇ ॥ <br>
     </p>
 
     <p>
-        ಸರಸಿಜನಿಲಯೇ ಸರೋಜ ಹಸ್ತೇ <br>
-        ಧವಳತರಾಂಶುಕ ಗಂಧಮಾಲ್ಯಶೋಭೇ । <br>
+        ಸರಸಿಜನಿಲಯೇ ಸರೋಜಹಸ್ತೇ <br>
+        ಧವಳತಮಾಂಶುಕ ಗಂಧಮಾಲ್ಯಶೋಭೇ । <br>
         ಭಗವತಿ ಹರಿವಲ್ಲಭೇ ಮನೋಜ್ಞೇ <br>
-        ತ್ರಿಭುವನ ಭೂತಿ ಕರೀ ಪ್ರಸೀದಮಹ್ಯಮ್ <br>
+        ತ್ರಿಭುವನಭೂತಿಕರೀ ಪ್ರಸೀದಮಹ್ಯಂ ॥ <br>
     </p>
 
     <p>
         ದಿಗ್ಘಸ್ತಿಭಿಃ ಕನಕ ಕುಂಭಮುಖಾವಸೃಷ್ಟ <br>
-        ಸ್ವರ್ವಾಹಿನೀ ವಿಮಲಚಾರುಜಲಾಪ್ಲುತಾಂಗೀಮ್ । <br>
-        ಪ್ರಾತರ್ನಮಾಮಿ ಜಗತಾಂ ಜನನೀಂ ಅಶೇಷ <br>
-        ಲೋಕಧಿನಾಥ ಗೃಹಣೀಮ್ ಅಮೃತಾಬ್ಧಿಪುತ್ರೀಮ್ <br>
+        ಸ್ವರ್ವಾಹಿನೀ ವಿಮಲಚಾರುಜಲಾಪ್ಲುತಾಂಗೀಂ । <br>
+        ಪ್ರಾತರ್ನಮಾಮಿ ಜಗತಾಂ ಜನನೀಮಶೇಷ <br>
+        ಲೋಕಧಿನಾಥ ಗೃಹಿಣೀಮಮೃತಾಬ್ಧಿಪುತ್ರೀಂ ॥ <br>
     </p>
 
     <h3>ಪ್ರಕ್ಷಿಪ್ತ ಶ್ಲೋಕಗಳು (Prakishipta Sholka)</h3>
@@ -353,15 +353,15 @@
     <h3>ಫಲ ಶ್ರುತಿ (Phala Shruthi)</h3>
 
     <p>
-        ಸ್ತುವಂತಿ ಯೇ ಸ್ತುತಿಭಿರಮೂಭಿರನ್ವಹಂ <br>
-        ತ್ರಯೀಮಯೀಂ ತ್ರಿಭುವನಮಾತರಂ ರಮಾಮ್ । <br>
-        ಗುಣಾಧಿಕಾ ಗುರುತುರ ಭಾಗ್ಯ ಭಾಜಿನೋ <br>
-        ಭವಂತಿ ತೇ ಭುವಿ, ಬುಧ ಭಾವಿತಾಶಯಾಃ <br>
+        ಸ್ತುವಂತಿ ಯೇ ಸ್ತುತಿಭಿರಮೀಭಿರನ್ವಹಂ <br>
+        ತ್ರಯೀಮಯೀಂ ತ್ರಿಭುವನಮಾತರಂ ರಮಾಂ । <br>
+        ಗುಣಾಧಿಕಾ ಗುರುತುರ ಭಾಗ್ಯ ಭಾಗಿನಃ <br>
+        ಭವಂತಿ ತೇ ಭುವಿ ಬುಧ ಭಾವಿತಾಶಯಾಃ ॥ <br>
     </p>
 
     <p>
         ಸುವರ್ಣಧಾರಾ ಸ್ತೋತ್ರಂ ಯಚ್ಛಂಕರಾಚಾರ್ಯ ನಿರ್ಮಿತಂ <br>
-        ತ್ರಿಸಂಧ್ಯಂ ಯಃ ಪಠೇನ್ನಿತ್ಯಂ ಸ ಕುಬೇರಸಮೋ ಭವೇತ್ <br>
+        ತ್ರಿಸಂಧ್ಯಂ ಯಃ ಪಠೇನ್ನಿತ್ಯಂ ಸ ಕುಬೇರಸಮೋ ಭವೇತ್ ॥ <br>
     </p>
 
     <h3>Reference Links:</h3>
