--- a/stotram/kanakadhara-stotram.html
+++ b/stotram/kanakadhara-stotram.html
@@ -19,6 +19,10 @@
 
     Sequence recommended by Nanduri Sambasiva Rao.<br>
 
+    NOTE: Pending.. extract OCR telugu text from Nanduri translate to Kannada and compare. We have found many discrepancies in Nanduri Kannada text, in particular the phala shruti section (which is not mentioned else where). <br>
+
+    NOTE: Pending.. add reason for resequencing the stotram.
+
     <h3>ಸಂಕಲ್ಪಮ್ (Sankalpam)</h3>
 
     <p>
@@ -262,6 +266,13 @@
         ದೃಷ್ಟ್ಯಾ ತ್ರಿವಿಷ್ಟಪಪದಂ ಸುಲಭಂ ಲಭಂತೇ । <br>
         ದೃಷ್ಟಿಃ ಪ್ರಹೃಷ್ಟ ಕಮಲೋದರ ದೀಪ್ತಿರಿಷ್ಟಾಂ <br>
         ಪುಷ್ಟಿಂ ಕೃಷೀಷ್ಟ ಮಮ ಪುಷ್ಕರ ವಿಷ್ಟರಾ ಯಾಃ ॥ <br>
+
+        <span class="ENG">
+            ishhTaa vishishhTamatayOpi yayaa dayaardra <br>
+            dRRishhTyaa trivishhTapapadaM sulabhaM labhaMtE । <br>
+            dRRishhTiH prahRRishhTa kamalOdara deeptirishhTaaM <br>
+            pushhTiM kRRishheeshhTa mama pushhkara vishhTaraa yaaH ॥ <br>
+        </span>
     </p>
 
     <p>
@@ -269,6 +280,13 @@
         ಶಾಕಂಬರೀತಿ ಶಶಿಶೇಖರ ವಲ್ಲಭೇತಿ । <br>
         ಸೃಷ್ಟಿ ಸ್ಥಿತಿ ಪ್ರಳಯ ಕೇಳಿಷು ಸಂಸ್ಥಿತಾಯೈ <br>
         ತಸ್ಯೈ ನಮಸ್ತ್ರಿಭುವನೈಕ ಗುರೋಸ್ತರುಣ್ಯೈ ॥ <br>
+
+        <span class="ENG">
+            geerdEvatEti garuDadhvaja suMdareeti <br>
+            shaakaMbareeti shashishEkhara vallabhEti । <br>
+            sRRishhTi sthiti pralaya kElishhu saMsthitaayai <br>
+            tasyai namastribhuvanaika gurOstaruNyai ॥ <br>
+        </span>
     </p>
 
     <p>
@@ -276,6 +294,13 @@
         ರತ್ಯೈ ನಮೋಽಸ್ತು ರಮಣೀಯ ಗುಣಾರ್ಣವಾಯೈ । <br>
         ಶಕ್ತ್ಯೈ ನಮೋಽಸ್ತು ಶತಪತ್ರ ನಿಕೇತನಾಯೈ <br>
         ಪುಷ್ಟ್ಯೈ ನಮೋಽಸ್ತು ಪುರುಷೋತ್ತಮ ವಲ್ಲಭಾಯೈ ॥ <br>
+
+        <span class="ENG">
+            shrutyai namO.astu shubhakarma phalaprasootyai <br>
+            ratyai namO.astu ramaNeeya guNaarNavaayai । <br>
+            shaktyai namO.astu shatapatra nikEtanaayai <br>
+            pushhTyai namO.astu purushhOttama vallabhaayai ॥ <br>
+        </span>
     </p>
 
     <p>
@@ -283,6 +308,13 @@
         ನಮೋಽಸ್ತು ದುಗ್ಧೋದಧಿ ಜನ್ಮಭೂಮ್ಯೈ । <br>
         ನಮೋಽಸ್ತು ಸೋಮಾಮೃತ ಸೋದರಾಯೈ <br>
         ನಮೋಽಸ್ತು ನಾರಾಯಣ ವಲ್ಲಭಾಯೈ ॥ <br>
+
+        <span class="ENG">
+            namO.astu naaleeka nibhaananaayai <br>
+            namO.astu dugdhOdadhi janmabhoomyai । <br>
+            namO.astu sOmaamRRita sOdaraayai <br>
+            namO.astu naaraayaNa vallabhaayai ॥ <br>
+        </span>
     </p>
 
     <p>
@@ -290,6 +322,13 @@
         ನಮೋಽಸ್ತು ಭೂಮಂಡಲ ನಾಯಿಕಾಯೈ ।
         ನಮೋಽಸ್ತು ದೇವಾದಿ ದಯಾಪರಾಯೈ <br>
         ನಮೋಽಸ್ತು ಶಾರಂಗಾಯುಧ ವಲ್ಲಭಾಯೈ ॥ <br>
+
+        <span class="ENG">
+            namO.astu hEmaaMbuja peeThikaayai <br>
+            namO.astu bhoomaMDala naayikaayai । <br>
+            namO.astu dEvaadi dayaaparaayai <br>
+            namO.astu shaarngaayudha vallabhaayai ॥ <br>
+        </span>
     </p>
 
     <p>
@@ -297,6 +336,13 @@
         ನಮೋಽಸ್ತು ವಿಷ್ಣೋರುರಸಿ ಸ್ಥಿತಾಯೈ । <br>
         ನಮೋಽಸ್ತು ಲಕ್ಷ್ಮ್ಯೈ ಕಮಲಾಲಯಾಯೈ <br>
         ನಮೋಽಸ್ತು ದಾಮೋದರ ವಲ್ಲಭಾಯೈ ॥ <br>
+
+        <span class="ENG">
+            namO.astu dEvyai bhRRigunaMdanaayai <br>
+            namO.astu vishhNOrurasi sthitaayai । <br>
+            namO.astu lakshhmyai kamalaalayaayai <br>
+            namO.astu daamOdara vallabhaayai ॥ <br>
+        </span>
     </p>
 
     <p>
@@ -304,6 +350,13 @@
         ನಮೋಽಸ್ತು ಭೂತ್ಯೈ ಭುವನಪ್ರಸೂತ್ಯೈ । <br>
         ನಮೋಽಸ್ತು ದೇವಾದಿಭಿರರ್ಚಿತಾಯೈ <br>
         ನಮೋಽಸ್ತು ನಂದಾತ್ಮಜ ವಲ್ಲಭಾಯೈ ॥ <br>
+
+        <span class="ENG">
+            namO.astu kaaMtyai kamalEkshhaNaayai <br>
+            namO.astu bhootyai bhuvanaprasootyai । <br>
+            namO.astu dEvaadibhirarchitaayai <br>
+            namO.astu naMdaatmaja vallabhaayai ॥ <br>
+        </span>
     </p>
 
     <p>
@@ -311,6 +364,13 @@
         ಸಾಮ್ರಾಜ್ಯ ದಾನವಿಭವಾನಿ ಸರೋರುಹಾಕ್ಷಿ । <br>
         ತ್ವದ್ವಂದನಾನಿ ದುರಿತಾ ಹರಣೋದ್ಯತಾನಿ <br>
         ಮಾಮೇವ ಮಾತರನಿಶಂ ಕಲಯಂತು ಮಾನ್ಯೇ ॥ <br>
+
+        <span class="ENG">
+            saMpatkaraaNi sakalEMdriya naMdanaani <br>
+            saamraajya daanavibhavaani sarOruhaakshhi । <br>
+            tvadvaMdanaani duritaa haraNOdyataani <br>
+            maamEva maataranishaM kalayaMtu maanyE ॥ <br>
+        </span>
     </p>
 
     <p>
@@ -318,6 +378,13 @@
         ಸೇವಕಸ್ಯ ಸಕಲಾರ್ಥ ಸಂಪದಃ । <br>
         ಸಂತನೋತಿ ವಚನಾಂಗ ಮಾನಸೈಃ <br>
         ತ್ವಾಂ ಮುರಾರಿಹೃದಯೇಶ್ವರೀಂ ಭಜೇ ॥ <br>
+
+        <span class="ENG">
+            yatkaTaakshha samupaasanaa vidhiH <br>
+            sEvakasya sakalaartha saMpadaH । <br>
+            saMtanOti vachanaaMga maanasaiH <br>
+            tvaaM muraarihRRidayEshvareeM bhajE ॥ <br>
+        </span>
     </p>
 
     <p>
@@ -325,6 +392,13 @@
         ಧವಳತಮಾಂಶುಕ ಗಂಧಮಾಲ್ಯಶೋಭೇ । <br>
         ಭಗವತಿ ಹರಿವಲ್ಲಭೇ ಮನೋಜ್ಞೇ <br>
         ತ್ರಿಭುವನಭೂತಿಕರೀ ಪ್ರಸೀದಮಹ್ಯಂ ॥ <br>
+
+        <span class="ENG">
+            sarasijanilayE sarOjahastE <br>
+            dhavalatamaaMshuka gaMdhamaalyashObhE । <br>
+            bhagavati harivallabhE manOjjhNE <br>
+            tribhuvanabhootikaree praseedamahyaM ॥ <br>
+        </span>
     </p>
 
     <p>
@@ -332,6 +406,13 @@
         ಸ್ವರ್ವಾಹಿನೀ ವಿಮಲಚಾರುಜಲಾಪ್ಲುತಾಂಗೀಂ । <br>
         ಪ್ರಾತರ್ನಮಾಮಿ ಜಗತಾಂ ಜನನೀಮಶೇಷ <br>
         ಲೋಕಧಿನಾಥ ಗೃಹಿಣೀಮಮೃತಾಬ್ಧಿಪುತ್ರೀಂ ॥ <br>
+
+        <span class="ENG">
+            digghastibhiH kanaka kuMbhamukhaavasRRishhTa <br>
+            svarvaahinee vimalachaarujalaaplutaaMgeem । <br>
+            praatarnamaami jagataaM jananeemashEshha <br>
+            lOkadhinaatha gRRihiNeemamRRitaabdhiputreeM ॥ <br>
+        </span>
     </p>
 
     <h3>ಪ್ರಕ್ಷಿಪ್ತ ಶ್ಲೋಕಗಳು (Prakishipta Sholka)</h3>
@@ -340,7 +421,14 @@
         ಬಿಲ್ವಾಟವಿ ಮಧ್ಯ ಲಸತ್ ಸರೋಜೆ <br>
         ಸಹಸ್ರ ಪತ್ರೆ ಸುಖಿ ಸನ್ನಿವಿಷ್ಟಮ್ | <br>
         ಅಷ್ಟ ಪದಾಂ ಭೋರುಹ ಪಾಣಿಪದ್ಮಾಮ್ <br>
-        ಸ್ಟುವರ್ಣ ವರ್ಣಾಮ್ ಪ್ರಣಮಾಮಿ ಲಕ್ಷ್ಮೀಮ್ <br>
+        ಸುವರ್ಣವರ್ಣಾಂ ಪ್ರಣಮಾಮಿ ಲಕ್ಶ್ಮೇಂ <br>
+
+        <span class="ENG">
+            bilvaaTavee madhya lasat sarOjae <br> 
+            sahasra patrae sukhasannivishTaaM <br>
+            ashTaa padaaMbhOruha paaNipadmaaM <br>
+            suvarNavarNaaM praNamaami lakshmeeM <br>
+        </span>
     </p>
 
     <p>
@@ -348,6 +436,13 @@
         ವಕ್ಷಸ್ಥಲಂ ಭರ್ತುಗೃಹಂ ಮುರಾರೇ: <br>
         ಕಾರುಣ್ಯತಃ ಕಲ್ಪಯ ಪದ್ಮವಾಸೆ | <br>
         ಲೀಲಾಗೃಹಂ, ಮೆ ಹೃದಯಾರವಿಂದಂ <br>
+
+        <span class="ENG">
+            Amboruhaṁ janma-griham bhavatyaah <br>
+            Vakshasthalam bhartu-griham Murareh <br>
+            Karunyatah kalpaya padma-vase <br>
+            Leela-griham me hridaya-aravindam <br>
+        </span>
     </p>
 
     <h3>ಫಲ ಶ್ರುತಿ (Phala Shruthi)</h3>
@@ -357,11 +452,23 @@
         ತ್ರಯೀಮಯೀಂ ತ್ರಿಭುವನಮಾತರಂ ರಮಾಂ । <br>
         ಗುಣಾಧಿಕಾ ಗುರುತುರ ಭಾಗ್ಯ ಭಾಗಿನಃ <br>
         ಭವಂತಿ ತೇ ಭುವಿ ಬುಧ ಭಾವಿತಾಶಯಾಃ ॥ <br>
+
+        <span class="ENG">
+            stuvaMti yE stutibhirameebhiranvahaM <br>
+            trayeemayeeM tribhuvanamaataraM ramaaM । <br>
+            guNaadhikaa gurutura bhaagya bhaaginaH <br>
+            bhavaMti tE bhuvi budha bhaavitaashayaaH ॥ <br>
+        </span>
     </p>
 
     <p>
         ಸುವರ್ಣಧಾರಾ ಸ್ತೋತ್ರಂ ಯಚ್ಛಂಕರಾಚಾರ್ಯ ನಿರ್ಮಿತಂ <br>
         ತ್ರಿಸಂಧ್ಯಂ ಯಃ ಪಠೇನ್ನಿತ್ಯಂ ಸ ಕುಬೇರಸಮೋ ಭವೇತ್ ॥ <br>
+
+        <span class="ENG">
+            suvarNadhaaraa stOtraM yacChaMkaraachaarya nirmitaM <br>
+            trisaMdhyaM yaH paThEnnityaM sa kubErasamO bhavEt ॥ <br>
+        </span>
     </p>
 
     <h3>Reference Links:</h3>
