--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
                 <h2>Ganapati</h2>
                 <ol>
                     <li><a href="puja/ganapati-puja.html">Ganapati Puja</a></li>
-                    <li><a href="stotram/ganpati-sankata-nashana-stotram.html">Sankata Nashana Stotram</a></li>
+                    <li><a href="puja/sankashta-hara-chaturdhi-vratam.html">Sankashta Hara Chaturdhi Vratam</a></li>
                     <li><a href="puja/ganesha-chathurthi.html">Ganesha Chaturthi</a></li>
+                    <li><a href="stotram/ganpati-sankata-nashana-stotram.html">Sankata Nashana Stotram</a></li>
                 </ol>
             </div>
 
@@ -67,6 +68,7 @@
                     <li> <a href="puja/shiva-abhishekam.html">Shiva Abhishekam</a> </li>
                     <li> <a href="stotram/shiva-panchakshara-stotram.html">Shiva Panchakshara Stotram</a> </li>
                     <li> <a href="stotram/maha-mrityunjaya-mantra.html">Maha Mrityunjaya Mantra</a> </li>
+                    <li> <a href="stotram/kalashtami-shiva-stuti.html">Kalashtami Shiva Stuti</a> </li>
                 </ol>
             </div>
 
