--- a/stotram/pitru-devata-stotram.html
+++ b/stotram/pitru-devata-stotram.html
@@ -20,48 +20,48 @@
                 ನಮಃ ಪಿತ್ರೇ ಜನ್ಮದಾತ್ರೇ ಸರ್ವ ದೇವಮಯಾಯ ಚ | <br>
                 ಸುಖದಾಯ ಪ್ರಸನ್ನಾಯ ಸುಪ್ರೀತಾಯ ಮಹಾತ್ಮನೇ || ೧ || <br>
                 <span class="ENG">
-                        nama: pitrae janmadaatrae sarva daevamayaaya cha | <br>
-                        sukhadaaya prasannaaya supreetaaya mahaatmanae | <br>
+                        namaḥ pitr̥e janma-dātre sarva-deva-mayāya ca | <br>
+                        sukha-dāya prasannāya su-prītāya mahātmane | <br>
                 </span>
                 <br>
 
                 ಸರ್ವಯಜ್ಞ ಸ್ವರೂಪಾಯ ಸ್ವರ್ಗಾಯ ಪರಮೇಷ್ಠಿನೇ | <br>
                 ಸರ್ವತೀರ್ಥಾವಲೋಕಾಯ ಕರುಣಾಸಾಗರಾಯ ಚ || ೨ || <br>
                 <span class="ENG">
-                        sarvayaj~na svaroopaaya svargaaya paramaeshThinae | <br>
-                        sarvateerdhaavalOkaaya karuNaasaagaraaya cha || 1 || <br>
+                        sarva-yajña-svarūpāya svargāya parameṣṭhine | <br>
+                        sarva-tīrtha-avalokāya karuṇā-sāgarāya ca || 1 || <br>
                 </span>
                 <br>
 
                 ನಮಃ ಸದಾಽಽಶುತೋಷಾಯ ಶಿವರೂಪಾಯ ತೇ ನಮಃ | <br>
                 ಸದಾಽಪರಾಧ ಕ್ಷಮಿಣೇ ಸುಖಾಯ ಸುಖದಾಯ ಚ || ೩ || <br>
                 <span class="ENG">
-                        namah sadaa-aaSutOshaaya Sivaroopaaya tae nama: | <br>
-                        sadaa-aaparaadha kshamiNae sukhaaya sukhadaaya cha || 2 || <br>
+                        namaḥ sadā-aśu-toṣāya śiva-rūpāya te namaḥ | <br>
+                        sadā-aparādha-kṣamiṇe sukhāya sukha-dāya ca || 2 || <br>
                 </span>
                 <br>
 
                 ದುರ್ಲಭಂ ಮಾನುಷಮಿದಂ ಯೇನ ಲಬ್ಧಂ ಮಯಾ ವಪುಃ |<br>
                 ಸಂಭಾವನೀಯಂ ಧರ್ಮಾರ್ಥೇ ತಸ್ಮೈ ಪಿತ್ರೇ ನಮೋ ನಮಃ || ೪ ||<br>
                 <span class="ENG">
-                        durlabhaM maanushamidaM yaena labdhaM mayaa vapu: | <br>
-                        saMbhaavaneeyaM dharmaardhae tasmai pitrae namO nama: || 3 || <br>
+                        durlabham mānuṣam idam labdham mayā vapuḥ | <br>
+                        saṁbhāvanīyam dharma-arthe tasmai pitr̥e namo namaḥ || 3 || <br>
                 </span>
                 <br>
 
                 ತೀರ್ಥಸ್ನಾನ ತಪೋಹೋಮ ಜಪಾದೀನ್ ಯಸ್ಯ ದರ್ಶನಮ್ |<br>
                 ಮಹಾಗುರೋಶ್ಚ ಗುರವೇ ತಸ್ಮೈ ಪಿತ್ರೇ ನಮೋ ನಮಃ || ೫ ||<br>
                 <span class="ENG">
-                        teerthasnaana tapOhOma japaadeen yasya darSanam | <br>
-                        mahaagurOScha guravae tasmai pitrae namO nama: || 4 || <br>
+                        tīrtha-snāna tapo-homa japa-ādīn yasya darśanam | <br>
+                        mahā-guroḥ-ca-gurave tasmai pitr̥e namo namaḥ || 4 || <br>
                 </span>
                 <br>
 
                 ಯಸ್ಯ ಪ್ರಣಾಮ ಸ್ತವನಾತ್ ಕೋಟಿಶಃ ಪಿತೃತರ್ಪಣಮ್ |<br>
                 ಅಶ್ವಮೇಧ ಶತೈಸ್ತುಲ್ಯಂ ತಸ್ಮೈ ಪಿತ್ರೇ ನಮೋ ನಮಃ || ೬ ||<br>
                 <span class="ENG">
-                        yasya praNaama stavanaat kOTiSa: pitRtarpaNam | <br>
-                        aSvamaedha shatai-stulyaM tasmai pitrae namO nama: || 5 || <br>
+                        yasya praṇāma stavanāt koṭiśaḥ pitṛ-tarpaṇam | <br>
+                        aśvamedha-śataiḥ tulyam tasmai pitr̥e namo namaḥ || 5 || <br>
                 </span>
                 <br>
         </p>
