--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <ol>
                     <li> <a href="puja/hanumaan-puja.html">Hanumaan Puja</a> </li>
                     <li> <a href="stotram/ramadootha-anjaneya-stotram.html">Ramadootha Anjaneya Stotram</a> </li>
+                    <li> <a href="stotram/hanuman-shloka.html">Hanuman Shloka</a> </li>
                 </ol>
             </div>
 
