--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     <li>
                         <a href="puja/lakshmi-chaturvimsati.html">Lakshmi Chaturvimsati</a><br>
                         (
-                            <a href="stotram/lakshmi-chaturvimsati-naamavali.html">Naamavali</a>,
-                            <a href="stotram/lakshmi-chaturvimsati-stotram.html">Stotram</a>
+                        <a href="stotram/lakshmi-chaturvimsati-naamavali.html">Naamavali</a>,
+                        <a href="stotram/lakshmi-chaturvimsati-stotram.html">Stotram</a>
                         )
                     </li>
                     <li> <a href="puja/vyuha-lakshmi-tantra.html">Vyuha Lakshmi Tantra</a> </li>
@@ -70,6 +70,7 @@
                     <li> <a href="stotram/shiva-panchakshara-stotram.html">Shiva Panchakshara Stotram</a> </li>
                     <li> <a href="stotram/maha-mrityunjaya-mantra.html">Maha Mrityunjaya Mantra</a> </li>
                     <li> <a href="stotram/kalashtami-shiva-stuti.html">Kalashtami Shiva Stuti</a> </li>
+                    <li> <a href="stotram/kalabhairava-ashtakam.html">Kalabhairava Ashtakam</a> </li>
                 </ol>
             </div>
 
@@ -84,8 +85,9 @@
             <div class="tile">
                 <h2>Surya Bhagavaan</h2>
                 <ol>
+                    <li> <a href="stotram/gayatri-mantra.html">Gayatri Mantra</a> </li>
                     <li> <a href="stotram/surya-namaskara-mantra.html">Surya Namaskaram</a> </li>
-                </ol>
+                    <li> <a href="stotram/surya-arghya-mantra.html">Surya Arghya Mantra</a> </li>
             </div>
 
             <div class="tile">
@@ -94,13 +96,12 @@
                     <li> <a href="puja/veerabhadra-puja.html">Veerabhadraswamy Puja (In progress)</a> </li>
                     <li> <a href="general/kuladevata-prarthana.html">Veerabhadra Prarthana</a> </li>
                     <li> <a href="stotram/veerabhadra-kavacham.html">Veerabhadra Kavacham (In progress)</a> </li>
-                    <hr>
                     <li> <a href="stotram/anagala-paraweshwari-mantras.html">Anagala Paraweshwari Mantras</a> </li>
                 </ol>
             </div>
 
             <div class="tile">
-                <h2>Uncategorised</h2>
+                <h2>General</h2>
                 <ol>
                     <li> <a href="stotram/daily-mantras.html">Daily Mantras</a> </li>
                     <li> <a href="stotram/argala-stotram.html">Argalaa Stotram</a> </li>
