--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
                 <h2>Ganapati</h2>
                 <ol>
                     <li><a href="puja/ganapati-puja.html">Ganapati Puja</a></li>
-                    <li><a href="puja/sankashta-hara-chaturdhi-vratam.html">Sankashta Hara Chaturdhi Vratam</a></li>
                     <li><a href="puja/ganesha-chathurthi.html">Ganesha Chaturthi</a></li>
                     <li><a href="stotram/ganpati-sankata-nashana-stotram.html">Sankata Nashana Stotram</a></li>
+                    <li><a href="stotram/runa-vimochana-ganapati.html">Runa Vimochana Ganapati Stotram</a></li>
+                    <li><a href="puja/sankashta-hara-chaturdhi-vratam.html">Sankashta Hara Chaturdhi Vratam (In progress)</a></li>
                 </ol>
             </div>
 
