--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="puja/ganesha-chathurthi.html">Ganesha Chaturthi</a></li>
                     <li><a href="stotram/ganpati-sankata-nashana-stotram.html">Sankata Nashana Stotram</a></li>
                     <li><a href="stotram/runa-vimochana-ganapati.html">Runa Vimochana Ganapati Stotram</a></li>
-                    <li><a href="puja/sankashta-hara-chaturdhi-vratam.html">Sankashta Hara Chaturdhi Vratam (In progress)</a></li>
+                    <li><a href="puja/sankashta-hara-chaturdhi-vratam.html">Sankashta Hara Chaturdhi Vratam 🚧</a></li>
                 </ol>
             </div>
 
@@ -31,7 +31,7 @@
                     <li><a href="stotram/venkateswara-vajra-kavacham.html">Venkateswara vajra kavacham</a></li>
                     <li><a href="stotram/garuda-gamana-stotram.html">Garuda Gamana Stotram</a></li>
                     <li><a href="stotram/venkateswara-stotram.html">Venkateswara Stotram</a></li>
-                    <li><a href="stotram/vishnu-sahasranamam.html">Vishnu Sahasranamam (in progress)</a></li>
+                    <li><a href="stotram/vishnu-sahasranamam.html">Vishnu Sahasranamam 🚧</a></li>
                 </ol>
             </div>
 
@@ -49,7 +49,7 @@
                     </li>
                     <li> <a href="puja/vyuha-lakshmi-tantra.html">Vyuha Lakshmi Tantra</a> </li>
                     <li> <a href="stotram/lakshmi-ashtakam.html">Lakshmi Ashtakam</a> </li>
-                    <li> <a href="stotram/kanakadhara-stotram.html">Kanakadara Stotram (in progress)</a> </li>
+                    <li> <a href="stotram/kanakadhara-stotram.html">Kanakadara Stotram 🚧</a> </li>
                     <li> <a href="stotram/lakshmi-ashtottara-satanaama-stotram.html">Lakshmi Ashtottara Satanaama
                             Stotram</a> </li>
                 </ol>
@@ -94,9 +94,9 @@
             <div class="tile">
                 <h2>Kuladeva & Kuladevi</h2>
                 <ol>
-                    <li> <a href="puja/veerabhadra-puja.html">Veerabhadraswamy Puja (In progress)</a> </li>
+                    <li> <a href="puja/veerabhadra-puja.html">Veerabhadraswamy Puja 🚧</a> </li>
                     <li> <a href="general/kuladevata-prarthana.html">Veerabhadra Prarthana</a> </li>
-                    <li> <a href="stotram/veerabhadra-kavacham.html">Veerabhadra Kavacham (In progress)</a> </li>
+                    <li> <a href="stotram/veerabhadra-kavacham.html">Veerabhadra Kavacham 🚧</a> </li>
                     <li> <a href="stotram/anagala-paraweshwari-mantras.html">Anagala Paraweshwari Mantras</a> </li>
                 </ol>
             </div>
@@ -108,7 +108,7 @@
                     <li> <a href="stotram/argala-stotram.html">Argalaa Stotram</a> </li>
                     <li> <a href="stotram/dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
                     <li> <a href="stotram/pitru-devata-stotram.html">Pitru Devata Stotram</a> </li>
-                    <li> <a href="stotram/dakshinamurthy-stotram.html">Dakshinamurthy Stotram (In progress)</a> </li>
+                    <li> <a href="stotram/dakshinamurthy-stotram.html">Dakshinamurthy Stotram 🚧</a> </li>
                 </ol>
             </div>
 
