--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 <ol>
                     <li> <a href="stotram/saraswati-kavacham.html">Saraswati Kavacham</a> </li>
                     <li> <a href="stotram/soundarya-lahari.html">Soundarya Lahari (15, 16 & 17)</a> </li>
+                    <li> <a href="puja/navaratri-puja.html">Navaratri Puja</a> </li>
                 </ol>
             </div>
 
