--- a/stotram/kalabhairava-ashtakam.html
+++ b/stotram/kalabhairava-ashtakam.html
@@ -106,7 +106,7 @@
                             shlokaNumber: 2,
                             lines: [
                                 {
-                                    kannada: "ಭಾನುಕೋಟಿ-ಭಾಸ್ವರಂ ಭವಬ್ಧಿತಾರಕಂ ಪರಂ",
+                                    kannada: "ಭಾನುಕೋಟಿ-ಭಾಸ್ವರಂ ಭವಾಬ್ಧಿತಾರಕಂ ಪರಂ",
                                     transliteration: "bhānukōṭi-bhāsvaraṃ bhavabdhitārakaṃ paraṃ",
                                     words: [
                                         { "kannada": "ಭಾನು", "transliteration": "Bhānu", "meaning": "sun" },
@@ -179,7 +179,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಶ್ಯಾಮಕಾಯ-ಮಾದಿದೇವ-ಮಕ್ಷರಂ ನಿರಾಮಯಮ್ ।",
+                                    kannada: "ಶ್ಯಾಮಕಾಯ-ಮಾದಿದೇವ-ಮಕ್ಷರಂ ನಿರಾಮಯಂ ।",
                                     transliteration: "śyāmakāya-mādidēva-makṣaraṃ nirāmayam ।",
                                     words: [
                                         { "kannada": "ಶ್ಯಾಮ", "transliteration": "Śyāma", "meaning": "dark, black-complexioned" },
@@ -189,7 +189,7 @@
                                         { "kannada": "ದೇವ", "transliteration": "Deva", "meaning": "God, divine being" },
 
                                         { "kannada": "ಅಕ್ಷರಂ", "transliteration": "Akṣaraṁ", "meaning": "imperishable, indestructible" },
-                                        { "kannada": "ನಿರಾಮಯಮ್", "transliteration": "Nirāmayaṁ", "meaning": "free from defects, disease, or suffering" }
+                                        { "kannada": "ನಿರಾಮಯಂ", "transliteration": "Nirāmayaṁ", "meaning": "free from defects, disease, or suffering" }
                                     ]
                                 },
                                 {
@@ -460,10 +460,10 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಕಾಶಿವಾಸಿ-ಲೋಕ-ಪುಣ್ಯಪಾಪ-ಶೋಧಕಂ ವಿಭುಮ್ ।",
-                                    transliteration: "kāśivāsi-lōka-puṇyapāpa-śōdhakaṃ vibhum ।",
+                                    kannada: "ಕಾಶಿವಾಸ-ಲೋಕ-ಪುಣ್ಯಪಾಪ-ಶೋಧಕಂ ವಿಭುಮ್ ।",
+                                    transliteration: "kāśivāsa-lōka-puṇyapāpa-śōdhakaṃ vibhum ।",
                                     words: [
-                                        { "kannada": "ಕಾಶಿವಾಸಿ", "transliteration": "Kāśivāsi", "meaning": "resident of Kashi" },
+                                        { "kannada": "ಕಾಶಿವಾಸ", "transliteration": "Kāśivāsa", "meaning": "resident of Kashi" },
                                         { "kannada": "ಲೋಕ", "transliteration": "Loka", "meaning": "world" },
                                         { "kannada": "ಪುಣ್ಯ", "transliteration": "Puṇya", "meaning": "merit, virtue" },
                                         { "kannada": "ಪಾಪ", "transliteration": "Pāpa", "meaning": "sin" },
@@ -522,11 +522,11 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಜ್ಞಾನಮುಕ್ತಿ-ಸಾಧಕಂ ವಿಚಿತ್ರ-ಪುಣ್ಯ-ವರ್ಧನಮ್ ।",
-                                    transliteration: "jñānamukti-sādhakaṃ vichitra-puṇya-vardhanam ।",
+                                    kannada: "ಜ್ಞಾನಮುಕ್ತಿ-ಸಾಧನಂ ವಿಚಿತ್ರ-ಪುಣ್ಯ-ವರ್ಧನಮ್ ।",
+                                    transliteration: "jñānamukti-sādhanaṃ vichitra-puṇya-vardhanam ।",
                                     words: [
                                         { "kannada": "ಜ್ಞಾನಮುಕ್ತಿ", "transliteration": "Jñāna-mukti", "meaning": "knowledge and liberation" },
-                                        { "kannada": "ಸಾಧಕಂ", "transliteration": "Sādhakaṁ", "meaning": "achieving, accomplishing" },
+                                        { "kannada": "ಸಾಧನಂ", "transliteration": "Sādhanaṁ", "meaning": "achieving, accomplishing" },
                                         { "kannada": "ವಿಚಿತ್ರ", "transliteration": "Vicitra", "meaning": "unique, wondrous" },
                                         { "kannada": "ಪುಣ್ಯ", "transliteration": "Puṇya", "meaning": "merit, virtuous" },
                                         { "kannada": "ವರ್ಧನಮ್", "transliteration": "Vardhanaṁ", "meaning": "increasing, enhancing" }
