--- a/index.html
+++ b/index.html
@@ -76,11 +76,12 @@
             </div>
 
             <div class="tile">
-                <h2>Saraswati</h2>
+                <h2>Devis</h2>
                 <ol>
                     <li> <a href="stotram/saraswati-kavacham.html">Saraswati Kavacham</a> </li>
                     <li> <a href="stotram/soundarya-lahari.html">Soundarya Lahari (15, 16 & 17)</a> </li>
                     <li> <a href="puja/navaratri-puja.html">Navaratri Puja</a> </li>
+                    <li> <a href="stotram/sharanagati-shlokas.html">Sharanagati Stotram</a> </li>
                 </ol>
             </div>
 
