--- a/puja/navaratri-puja.html
+++ b/puja/navaratri-puja.html
@@ -33,82 +33,76 @@
         <li><b>ಭೂಮಿ ಶಯನಂ:</b> If possible, sleep on the ground</li>
     </ol>
 
-    <table border="0" cellpadding="0" cellspacing="0" width="355" style="">
+    <table border="1">
         <thead>
-            <tr height="20" style="height:15.0pt">
-
+            <tr>
                 <th>Ready</th>
-
                 <th>Need prep</th>
-
                 <th>Collect</th>
-
             </tr>
         </thead>
-        <colgroup>
-            <col width="172" style="mso-width-source:userset;mso-width-alt:6290;width:129pt">
-            <col width="119" style="mso-width-source:userset;mso-width-alt:4352;width:89pt">
-            <col width="64" style="width:48pt">
-        </colgroup>
         <tbody>
-            <tr height="20" style="height:15.0pt">
-                <td height="20" style="height:15.0pt">Devi Photo</td>
+            <tr>
+                <td>Devi Photo</td>
                 <td>Turmeric ganesha</td>
                 <td>Flowers</td>
             </tr>
-            <tr height="20" style="height:15.0pt">
-                <td height="20" style="height:15.0pt">Agarbathi stand</td>
+            <tr>
+                <td>Agarbathi stand</td>
                 <td>Rice Prasadam</td>
                 <td>Opt Cocount</td>
             </tr>
-            <tr height="20" style="height:15.0pt">
-                <td height="20" style="height:15.0pt">Turmeric</td>
+            <tr>
+                <td>Turmeric</td>
                 <td>Panchamruta</td>
                 <td>Opt Banana</td>
             </tr>
-            <tr height="20" style="height:15.0pt">
-                <td height="20" style="height:15.0pt">Kumkum</td>
+            <tr>
+                <td>Kumkum</td>
                 <td>Akshatas</td>
                 <td>Fruits</td>
             </tr>
-            <tr height="20" style="height:15.0pt">
-                <td height="20" style="height:15.0pt">Oil + lamp</td>
+            <tr>
+                <td>Oil + lamp</td>
                 <td>Yajnopaveetam</td>
                 <td>Agarbati</td>
             </tr>
-            <tr height="20" style="height:15.0pt">
-                <td height="20" style="height:15.0pt">2 panchapatras + water</td>
+            <tr>
+                <td>2 panchapatras + water</td>
                 <td>Opt Kalasham</td>
                 <td>Karpooram</td>
             </tr>
 
-            <tr height="20" style="height:15.0pt">
-                <td height="20" style="height:15.0pt">Bell</td>
+            <tr>
+                <td>Bell</td>
                 <td>Cotton + T + K</td>
                 <td></td>
             </tr>
 
-            <tr height="20" style="height:15.0pt">
-                <td height="20" style="height:15.0pt">Karpooram stand</td>
+            <tr>
+                <td>Karpooram stand</td>
                 <td>Opt Taambolam</td>
                 <td></td>
             </tr>
 
-            <tr height="20" style="height:15.0pt">
-                <td height="20" style="height:15.0pt">Chamaram</td>
+            <tr>
+                <td>Chamaram</td>
                 <td></td>
                 <td></td>
             </tr>
 
-            <tr height="20" style="height:15.0pt">
-                <td height="20" style="height:15.0pt">Opt Plate + idol</td>
+            <tr>
+                <td>Opt Plate + idol</td>
                 <td></td>
                 <td></td>
             </tr>
         </tbody>
     </table>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/p1dksikOis0?si=zbzXhbL10-N7jUrE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/p1dksikOis0?si=zbzXhbL10-N7jUrE"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <!-- Common puja sections loaded dynamically -->
     <div id="shuddikarana-mantra"></div>
@@ -609,13 +603,45 @@
             AnayA yathAshakti pUjayA cha <u>Bhagavati Sarvātmikā</u> |<br>
         </span>
 
-        ಶ್ರೀ <u>ದುರ್ಗಾ</u> ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು<br>
+        ಶ್ರೀ <u>ದುರ್ಗಾ</u> ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು <br>
         <span class="ENG">
             Śrī <u>Durgaa</u> devatA suprasannaH suprEtO varadO bhavatu ||<br>
         </span>
     </b>
 
     <div id="swasti"></div>
+
+    <h1>Day 1 - ಶೈಲಪುತ್ರೀ<span class="ENG">(Shailaputri)</span></h1>
+    ವಂದೇ-ವಾಂಛಿತ-ಲಾಭಾಯ ಚಂದ್ರಾರ್ಧ-ಕೃತ-ಶೇಖರಾಂ । <br>
+    ವೃಷಾರೂಢಾಂ ಶೂಲಧರಾಂ ಶೈಲಪುತ್ರೀಂ ಯಶಸ್ವಿನೀಂ ॥ <br>
+    <span class="ENG">
+        Vande-Vaanchita-Laabhaaya Chandrardha-Krita-Shekharaam <br>
+        Vrishaaroodaam Shooladharaam Shailaputreem Yashasvineem || <br>
+    </span>
+
+    <h1>Day 2 - ಬ್ರಹ್ಮಚಾರಿನಿ <span class="ENG">(Brahmacharini)</span></h1>
+    ದಧಾನಾ ಕರಪದ್ಮಾಭ್ಯಾಂ ಅಕ್ಷಮಾಲಾಕಮಂಡಲೂ । <br>
+    ದೇವೀ ಪ್ರಸೀದತು ಮಯಿ ಬ್ರಹ್ಮಚಾರಿಣ್ಯನುತ್ತಮಾ॥
+    <span class="ENG">
+        Dadhana karapadmaabhyaam akshamala kamandaloo <br>
+        Devi praseedatu mayi Brahmacharinya-nuttamaa||
+    </span>
+
+    <h1>Day 3 - ಚಂದ್ರಘಂಟ<span class="ENG">(Chandraghanta)</span></h1>
+    ಪಿಂಡಜ ಪ್ರವರಾರುಢಾ ಚಂಡಕೋಪಾಸ್ತ್ರಕೈರ್ಯುತಾ <br>
+    ಪ್ರಸಾದಂ ತನುತೇ ಮಹ್ಯಂ ಚಂದ್ರಘಂಟೇತಿ ವಿಶ್ರುತಾ ||
+    <span class="ENG">
+        Pindaja Pravara-Arudha Chanda-Kopa-Astra-Kairyuta <br>
+        Prasadam Tanuthe Mahyaam Chandraghantheti Vishrutha ||
+    </span>
+
+    <h1>Day 4 - ಕೂಷ್ಮಾಂಡಾ<span class="ENG">(Kushmanda)</span></h1>
+    ಸುರಾಸಂಪೂರ್ಣ ಕಲಶಂ ರುದಿರಾಪ್ಲುತಮೇವ ಚ । <br>
+    ದಧಾನಾ ಹಸ್ತಪದ್ಮಾಭ್ಯಾಂ ಕೂಷ್ಮಾಂಡಾ ಶುಭದಾಸ್ತು ಮೇ ॥
+    <span class="ENG">
+        suraa-sampoorna kalasham rudhira-aplutam-eva cha | <br>
+        dhadhana hasta-padma-abhyaam kushmanda-shubhadaastu mae ||
+    </span>
 
     <!-- Centralized Scripts -->
     <script src="../scripts/common.js"></script>
