--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                     <li> <a href="stotram/soundarya-lahari.html">Soundarya Lahari (15, 16 & 17)</a> </li>
                     <li> <a href="puja/navaratri-puja.html">Navaratri Puja</a> </li>
                     <li> <a href="stotram/sharanagati-shlokas.html">Sharanagati Stotram</a> </li>
+                    <li> <a href="stotram/khadgamala-stotram.html">Khadgamala Stotram</a> </li>
                 </ol>
             </div>
 
