--- a/general/kalashaaradhana.html
+++ b/general/kalashaaradhana.html
@@ -1,35 +1,35 @@
 <h2>ಕಲಶಾರಾಧನ <span class="ENG">(Kalasha Arādhana)</span></h2>
 <p>
 
-    ಕಲಶಸ್ಯ ಮುಖೇ ವಿಷ್ಣುಃ ಕಂಠೇ ರುದ್ರಸ್ಸಮಾಶ್ರಿತಃ <br>
-    <span class="ENG">kalashasya mukhe viṣṇuḥ kaṇṭhe rudraḥ samāśritaḥ
+    ಕಲಶಸ್ಯ ಮುಖೇ ವಿಷ್ಣುಃ ಕಂಠೇ ರುದ್ರಃ ಸಮಾಶ್ರಿತಃ । <br>
+    <span class="ENG">Kalashasya mukhe Vishnuh kanthe Rudrah samashritah
         At the mouth (top) of the Kalasha resides Vishnu,
         At the neck of the Kalasha resides Rudra<br></span>
 
-    ಮೂಲೇ ತತ್ರ ಸ್ಥಿತೋ ಬ್ರಹ್ಮಾ ಮಧ್ಯೆ ಮಾತೃಗಣಾಃ ಸ್ಮೃತಾಃ <br>
-    <span class="ENG">mūle tatra sthito brahmā madhye mātr̥gaṇāḥ smṛtāḥ
+    ಮೂಲೇ ತತ್ರ ಸ್ಥಿತೋ ಬ್ರಹ್ಮಾ ಮಧ್ಯೇ ಮಾತೃಗಣಾಃ ಸ್ಮೃತಾಃ ॥ <br>
+    <span class="ENG">Moole tatra sthito Brahma madhye matriganah smritah
         At the base of the Kalasha is Brahma
         In the middle are said to dwell the Matrikas (Mother Goddesses).<br></span>
 
-    ಕುಕ್ಷೌ ತು ಸಾಗರಾಃ ಸರ್ವೇ ಸಪ್ತದ್ವೀಪಾ ವಸುಂಧರಾ <br>
-    <span class="ENG">kukṣau tu sāgarāḥ sarve saptadvīpā vasundharā
+    ಕುಕ್ಷೌ ತು ಸಾಗರಾಃ ಸರ್ವೇ ಸಪ್ತದ್ವೀಪಾ ವಸುಂಧರಾ । <br>
+    <span class="ENG">Kukshau tu sagarah sarve saptadveepa vasundhara
         In the belly of the Kalasha are all the oceans
         The seven continents and the Earth herself<br></span>
 
-    ಋಗ್ವೇದೋ ಥ ಯಜುರ್ವೇದಸ್ಸಾಮವೇದೋ ಹ್ಯಥರ್ವಣಃ <br>
-    <span class="ENG">ṛgvedo'tha yajurvedaḥ sāmavedo hyatharvaṇaḥ
+    ಋಗ್ವೇದೋऽಥ ಯಜುರ್ವೇದಃ ಸಾಮವೇದೋಽಥರ್ವಣಃ ॥ <br>
+    <span class="ENG">Rigvedo'tha Yajurvedah Samavedo'tharvanah
         The Rigveda, Yajurveda, Samaveda, and indeed the Atharvaveda<br></span>
 
-    ಅಂಗೈಶ್ಚ ಸಹಿತಾಃ ಸರ್ವೇ ಕಲಶಾಂಬು ಸಮಾಶ್ರಿತಾಃ <br>
-    <span class="ENG">aṅgaiśca sahitāḥ sarve kalaśāmbu samāśritāḥ
+    ಅಂಗೈಶ್ಚ ಸಹಿತಾಃ ಸರ್ವೇ ಕಲಶಾಂಬು ಸಮಾಶ್ರಿತಾಃ । <br>
+    <span class="ENG">Angaishcha sahitah sarve kalashambu samashritah
         Together with all their limbs, they are all established in the water of the Kalasha.<br></span>
 
-    ಗಂಗೆಚ ಯಮುನೇಚೈವ ಗೋದಾವರಿ ಸರಸ್ವತೀ <br>
-    <span class="ENG">gaṅgeca yamunecaiva godāvari sarasvatī
+    ಗಂಗೆ ಚ ಯಮುನೇ ಚೈವ ಗೋದಾವರಿ ಸರಸ್ವತೀ ॥ <br>
+    <span class="ENG">Gange cha Yamune chaiva Godavari Sarasvati
         Ganga, Yamuna, Godavari, and Saraswati<br></span>
 
-    ನರ್ಮದಾ ಸಿಂಧು ಕಾವೇರಿ ಜಲೆಸ್ಮಿನ್ ಸನ್ನಿಧಿಂ ಕುರು <br>
-    <span class="ENG">narmadā sindhu kāveri jalesmin sannidhiṁ kuru
+    ನರ್ಮದೇ ಸಿಂಧು ಕಾವೇರಿ ಜಲೆಽಸ್ಮಿನ್ ಸನ್ನಿಧಿಂ ಕುರು ॥ <br>
+    <span class="ENG">Narmade Sindhu Kaveri jalesmin sannidhim kuru
         Narmada, Sindhu, and Kaveri
         Establish your divine presence in this water
         <br></span><br>
