--- a/puja/navaratri-puja.html
+++ b/puja/navaratri-puja.html
@@ -117,8 +117,8 @@
     <p>
         ಮಮ ಉಪಾತ್ತ ಸಮಸ್ತ ದು ರಿತಕ್ಷಯದ್ವಾರಾ ಶ್ರೀ ದುರ್ಗಾಂಬಿಕಾ ಪ್ರೀತ್ಯರ್ಥಂ, <br>
         ಸಮಸ್ತ ದೇವತಾ ಬ್ರಾಹ್ಮಣ ಹರಿ ಹರ ಗುರು ಚರಣ ಸನ್ನಿಧೌ, <br>
-        ಶುಭೇ ಶೋಬಾನೇ ಮುಹೂರ್ತೇ, ಶುಭ ನಕ್ಷತ್ರೇ, ಶುಭ ಕರಣೇ, <br>
-        ಏವಂ ಗುಣ ವಿಶೇಷಣಾ ವಿಶಿಷ್ಟಾಯಾಂ ಶುಭ ತಿಧೌ, <br>
+        ಶುಭೇ ಶೋಭನೇ ಮುಹೂರ್ತೇ, ಶುಭ ನಕ್ಷತ್ರೇ, ಶುಭ ಕರಣೇ, <br>
+        ಏವಂ ಗುಣ ವಿಶೇಷಣ ವಿಶಿಷ್ಟಾಯಾಂ ಶುಭತಿಥೌ, <br>
         ಅಸ್ಮಾಕಂ ಸಹ ಕುಟುಂಬಾನಾಂ, ಸರ್ವೇಷಾಂ ಗೊತ್ರೋದ್ಭವಾನಾಂ ಜೀವಾನಾಂ, <br>
         ಕ್ಷೇಮ ಸ್ಥೈರ್ಯ ವಿಜಯ ಅಭಯ ಆಯುರಾರೋಗ್ಯ ಐಶ್ವರ್ಯ ಅಭಿವೃದ್ಧ್ಯರ್ಥಂ, <br>
         ಧರ್ಮಾರ್ಧ ಕಾಮ ಮೋಕ್ಷ ಚತುರ್ವಿಧ ಪುರುಷಾರ್ಥ ಫಲ ಸಿಧ್ಯರ್ಥಂ, <br>
@@ -134,7 +134,7 @@
         <span class="ENG">
             Mama upaata samasta duritakshaya dwaaraa Sri Durgaambikaa preetyartham, <br>
             Samasta Devataa Braahmana Harihara Guru charana sannidhau, <br>
-            Shubhe Shobhaane Muhurte, Shubha Nakshatre, Shubha Karane, <br>
+            Shubhe Shobhane Muhurte, Shubha Nakshatre, Shubha Karane, <br>
             Evam guna visheshaana vishishtayaam Shubha tidhau, <br>
             Asmaakam saha kutumbaanaam, sarveshaam gotrodhbavaanaam jeevaanaam, <br>
             kshema sthairya vijaya abhaya aayuraarogya aishwarya abhivruddhyartham, <br>
@@ -250,21 +250,21 @@
     <p>
         ಹ್ರೀಂಕಾರಾಸನ ಗರ್ಭಿತಾ ನಲ ಶಿಖಾಂ ಸೌಃ ಕ್ಲೀಂ ಕಲಾಂ ಬಿಭ್ರತೀಂ । <br>
         ಸೌವರ್ಣಾಂಬರ ಧಾರಿಣೀಂ ವರಸುಧಾ ಧೌತಾಂ ತ್ರಿನೇತ್ರೋಜ್ಜ್ವಲಾಂ । <br>
-        ವಂದೇ ಪುಸ್ತಕ ಪಾಶಮಂಕುಶ ಧರಾಂ ಸ್ರಗ್ಭೂಷಿತಾ ಮುಜ್ಜ್ವಲಾಂ । <br>
-        ತ್ವಾಂ ಗೌರೀಂ ತ್ರಿಪುರಾಂ ಪರಾತ್ಪರ ಕಲಾಂ ಶ್ರೀಚಕ್ರ ಸಂಚಾರಿಣೀಂ ॥ <br>
+        ವಂದೇ ಪುಸ್ತಕ ಪಾಶಾಂಕುಶ ಧರಾಂ ಸ್ರಗ್ಭೂಷಿತಾಂ ಉಜ್ಜ್ವಲಾಂ । <br>
+        ತ್ವಾಂ ಗೌರೀಂ ತ್ರಿಪುರಾಂ ಪರಾತ್ಪರಕಲಾಂ ಶ್ರೀಚಕ್ರ ಸಂಚಾರಿಣೀಂ ॥ <br>
         ಶ್ರೀ ದುರ್ಗಾ ದೇವ್ಯೈ ನಮಃ ಧ್ಯಾಯಾಮಿ ॥
         <span class="ENG">
             Hreemkaraasana garbhitaa nala shikhaam souh kleem kalaam bibhrateem, <br>
             Sowvarnaambara dhaarineem varasudhaa dhautaam trinethrojjwalaam, <br>
-            Vande pustaka paasha mankusa dharaam sragbhooshitaa mujjwalaam, <br>
-            Tvaam Gaurim Tripuraam Paraatpara kalaam Srichakra samchaarineem. <br>
+            Vande pustaka paashaamkusha dharaam sragbhooshitaam ujjwalaam, <br>
+            Tvaam Gaurim Tripuraam Paraatparakalaam Srichakra samchaarineem. <br>
             Sri Durgaa Devyai Namah Dhyaayaami.
         </span>
     </p>
 
     <h3>ಆವಾಹನಂ<span class="ENG">Aavahanam</span></h3>
     <p>
-        ಶ್ರೀ ವಾಗ್ದೇವೀಂ ಮಹಾಕಾಳೀಂ ಮಹಾಲಕ್ಷ್ಮೀಂ ಸರಸ್ವತೀಂ । <br>
+        ಶ್ರೀ ವಾಗ್ದೇವೀಂ ಮಹಾಕಾಳೀಂ ಮಹಾಲಕ್ಷ್ಮೀಂ ಸರಸ್ವತೀಮ್ । <br>
         ತ್ರಿಶಕ್ತಿರೂಪಿಣೀಂಬಾಂ ದುರ್ಗಾಂ ಚಂಡೀಂ ನಮಾಮ್ಯಹಂ ॥ <br>
         ಶ್ರೀ ದುರ್ಗಾ ದೇವ್ಯೈ ನಮಃ ಆವಾಹಯಾಮಿ ॥
         <span class="ENG">
@@ -331,7 +331,7 @@
         ತದನಂತರಂ ಶುದ್ಧೋದಕ ಸ್ನಾನಂ ಸಮರ್ಪಯಾಮಿ । <br>
         ಸ್ನಾನಾನಂತರಂ ಆಚಮನೀಯಂ ಸಮರ್ಪಯಾಮಿ ॥
         <span class="ENG">
-            Payodadhi ghruto petam sharkaraa madhu samyutam, <br>
+            Payo (milk:8) dadhi(curd:2) ghruto(ghee:1) petam sharkaraa(sugar:1) madhu(honey:1) samyutam, <br>
             Panchaamrutamidam Snaanam Gruhaana Surapoojite. <br>
             Sri Durgaa Devyai Namah Panchaamruta Snaanam Samarpayaami. <br> <br>
 
@@ -342,8 +342,8 @@
 
     <h3>ವಸ್ತ್ರಂ<span class="ENG">Vastram</span></h3>
     <p>
-        ಪೀತಾಂಬರ ಗಿಲ್ಲೀ ಪೀತಾಂಬರ ಸಹೋದರೀ । <br>
-        ಪೀತಾಂಬರಂ ಪ್ರಯಚ್ಛಾಮಿ ವಿದ್ಯುತಂಗ ಜಟಾಧರೇ ॥ <br>
+        ಪೀತಾಂಬರ ಧರೇ ದೇವೀ ಪೀತಾಂಬರ ಸಹೋದರೀ । <br>
+        ಪೀತಾಂಬರಂ ಪ್ರಯಚ್ಛಾಮಿ ವಿದ್ಯುತ್ ಅಂಗ ಜಟಾಧರೇ ॥ <br>
         ಶ್ರೀ ದುರ್ಗಾ ದೇವ್ಯೈ ನಮಃ ವಸ್ತ್ರಯುಗ್ಮಂ ಸಮರ್ಪಯಾಮಿ ॥ <br> <br>
 
         ವಸ್ತ್ರಯುಗ್ಮ ಧಾರಣಾನಂತರಂ ಆಚಮನೀಯಂ ಸಮರ್ಪಯಾಮಿ ॥
