--- a/stotram/kalabhairava-ashtakam.html
+++ b/stotram/kalabhairava-ashtakam.html
@@ -251,10 +251,10 @@
                                         { "kannada": "ವಿಗ್ರಹಮ್", "transliteration": "Vigrahaṁ", "meaning": "protector, divine form" }]
                                 },
                                 {
-                                    kannada: "ನಿಕ್ವಣನ್-ಮನೋಜ್ಞ-ಹೇಮ-ಕಿಂಕಿಣೀ-ಲಸತ್ಕಟಿಂ",
-                                    transliteration: "nikvaṇan-manōjña-hēma-kiṅkiṇī-lasatkaṭiṃ",
+                                    kannada: "ವಿ-ನಿಕ್ವಣನ್-ಮನೋಜ್ಞ-ಹೇಮ-ಕಿಂಕಿಣೀ-ಲಸತ್ಕಟಿಂ",
+                                    transliteration: "vi-nikvaṇan-manōjña-hēma-kiṅkiṇī-lasatkaṭiṃ",
                                     words: [
-                                        { "kannada": "ನಿಕ್ವಣನ್", "transliteration": "Nikvaṇan", "meaning": "pleasing, charming" },
+                                        { "kannada": "ವಿ-ನಿಕ್ವಣನ್", "transliteration": "Nikvaṇan", "meaning": "pleasing, charming" },
                                         { "kannada": "ಮನೋಜ್ಞ", "transliteration": "Manojña", "meaning": "delightful, attractive" },
                                         { "kannada": "ಹೇಮ", "transliteration": "Hema", "meaning": "gold" },
                                         { "kannada": "ಕಿಂಕಿಣೀ", "transliteration": "Kiṅkiṇī", "meaning": "small bells, ornament" },
