save argala stotram

--- a/stotram/argala-stotram.html
+++ b/stotram/argala-stotram.html
@@ -42,8 +42,12 @@
 
     
     <h4>Meaning</h4>
-    O Devi, grant me beautiful pleasing wife, from good family,<br>
-    who aligns with my thoughts, can help me cross worldly struggles.<br>
+    O Mother Durgā! Bless me with a wife<br>
+    who delights my mind,<br>
+    who acts in accordance with my nature,<br>
+    who helps uplift and support me,<br>
+    who enables me to cross the vast ocean of worldly existence,<br>
+    and who is capable of giving birth to a son who uplifts the lineage.<br>
 
     <h4>Sankalpa</h4>
     <ul>
